platform/kubernetes/python_ms_k8s_manifest/argocd/argocd-service-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
